codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_model_picker_width_80.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 80)"
---
                                                                                
  Select Model and Effort                                                       
                                                                                
› 1. gpt-5.1-codex（ 当 前 ）   为  Codex 优 化 ， 兼 顾 推 理 质 量 与 编 码 能 力 。              
  2. gpt-5.1-codex-mini     为  Codex 优 化 ， 更 便 宜 更 快 ， 但 能 力 较 弱 。              
  3. gpt-4.1-codex          Legacy model. Use when you need compatibility with  
                            older automations.
